boltffi_backend/tests/jni/snapshots/jni__direct_vector__jni_bridge_maps_direct_record_vectors_to_java_byte_arrays.snap
---
source: boltffi_backend/tests/jni/direct_vector.rs
expression: "rendered_fixture(\"direct_vector/record_vector_parameter\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    double x;
    double y;
} ___Point;
uint32_t boltffi_function_demo_count(const uint8_t *values_ptr, uintptr_t values_byte_len);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1count(JNIEnv *env, jclass cls, jbyteArray values) {
    (void)cls;

    jbyte *__boltffi_values_ptr = NULL;
    jsize __boltffi_values_len = 0;

    if (values == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI array argument was null");
        goto __boltffi_error;
    }
    __boltffi_values_len = (*env)->GetArrayLength(env, values);
    __boltffi_values_ptr = (*env)->GetByteArrayElements(env, values, NULL);
    if (__boltffi_values_ptr == NULL) {
        goto __boltffi_error;
    }

    (void)env;
    uint32_t __boltffi_result = boltffi_function_demo_count((const uint8_t *)__boltffi_values_ptr, (uintptr_t)__boltffi_values_len);

    if (__boltffi_values_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, values, __boltffi_values_ptr, JNI_ABORT);
        __boltffi_values_ptr = NULL;
    }

    return (jint)__boltffi_result;
__boltffi_error:
    if (__boltffi_values_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, values, __boltffi_values_ptr, JNI_ABORT);
        __boltffi_values_ptr = NULL;
    }
    return 0;
}
